Update README.md with detailed setup instructions and project description